changes in images link
changes in images link

changes in images link

changes in images link

changes in images link

changes in images link

changes in images link

--- a/b18074.md
+++ b/b18074.md
@@ -104,7 +104,8 @@ Eg:
 
 - *GOOGLE TILE COORDINATE* –Google has divided the map into zones / tiles (16 of them ) and u need a tile coordinate to access images of that place . 
 
-<img src="b18074/tileCoordinates.png" width=400 height=400>   
+
+<img src="https://developers.google.com/maps/documentation/images/tileCoordinates.png" alt="tile coordinates" width="400" height="400">   
 
 - *PIXEL COORDINATE*- Pixel coordinates reference a specific pixel on the map at a specific zoom level, whereas world coordinates reflect absolute locations on a given projection. Pixel coordinates are calculated using the following formula: 
 
@@ -168,9 +169,10 @@ In range searching, the input is a search rectangle (Query box). Searching is qu
 
 For priority search such as nearest neighbor search, the query consists of a point or rectangle. The root node is inserted into the priority queue. Until the queue is empty or the desired number of results have been returned the search continues by processing the nearest entry in the queue. Tree nodes are expanded and their children reinserted. Leaf entries are returned when encountered in the queue. This approach can be used with various distance metrics, including great-circle distance for geographic data.
 
- <img src="b18074/rtree.png" width=400 height=400>
- <img src="b18074/Rtree.png" width=800 height=1000>
-  <img src="b18074/ustree.png" width=500 height=500>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/RTree-Visualization-3D.svg/400px-RTree-Visualization-3D.svg.png" alt="r tree 3d model" width="400" height="400"> 
+
+ <img src="https://cglab.ca/~cdillaba/comp5409_project/images/rtree.png" alt="r tree structure" width=800 height=1000>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/R%2A-tree_bulk_loaded_with_sort-tile-recursive.png/300px-R%2A-tree_bulk_loaded_with_sort-tile-recursive.png" alt="us map via r tree" width=500 height=500>
   compiled R tree in 2D rect.
 
  
@@ -206,7 +208,7 @@ It acquires data from TeleAtlas and has partnered with various governments .
 Consistent spatial and temporal calibration allows trends in land-cover to be quantified, enables automation of forest cover characterizations, and leads to reduced ground data requirements because areas with similar characteristics are easier to identify.
 Radiometric calibration can be absolute where radiometric values are converted to a geophysical standard quantity such as surface reflectance, or relative where radiometric values are adjusted to a reference standard by comparing the reference ground reflector signatures to see if there are significant differences between sensors. Images need to be calibrated to the reference so that pixels in different images can be compared directly, no matter on which day or season the image was collected or under what sun-sensor-target geometry. The viewing geometry varies significantly across the path of the satellite resulting in very different reflectance values for the same land cover feature.
 
-<img src="b18074/correction.gif" width=400 height=400>
+<img src="https://www.nrcan.gc.ca/sites/www.nrcan.gc.ca/files/earthsciences/images/resource/tutor/fundam/images/ccsamp_e.gif" alt="preprocessing image data" width=400 height=400>
 
 *Other Preprocessing includes noise reduction , balancing illumination , sharpness of satellite images .*
 
@@ -230,13 +232,15 @@ Now using data from TMC (Traffic message Channel)  we are going to take out attr
 
 - BRIEF EXPLANATION -  
 
-Google Maps uses <h3 A* algorithm > for finding the shortest path and alternates routes in real time. A* algorithm is an advanced form of Breadth first search . It avoids costly path and choose the most promising path . It is a very smart algorithm. It is used approximate the shortest path in real-life situations, like- in maps, games where there can be many hindrances. It is formulated in terms of weighted graphs in case of google map this weight is travel time. Starting from a specific node(source node) of a graph, it constructs a tree of paths starting from that node, expanding paths one step at a time, until one of its paths ends at the predetermined destination node. 
+Google Maps uses  **Astar algorithm** for finding the shortest path and alternates routes in real time. A* algorithm is an advanced form of Breadth first search . It avoids costly path and choose the most promising path . It is a very smart algorithm. It is used approximate the shortest path in real-life situations, like- in maps, games where there can be many hindrances. It is formulated in terms of weighted graphs in case of google map this weight is travel time. Starting from a specific node(source node) of a graph, it constructs a tree of paths starting from that node, expanding paths one step at a time, until one of its paths ends at the predetermined destination node. 
 
 At each iteration of its main loop, A* needs to determine which of its partial paths to expand into one or more longer paths. It does so based on an estimate of the cost (total time taken) still to go to the goal node. Specifically, A* selects the path that minimize. 
 
 **f(n)=g(n)+h(n)**
 
- <img src="b18074/Astar.png" width=800 height=800> 
+ <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/A%2A_Search_Example_on_North_American_Freight_Train_Network.gif" alt="a star flow diagram" width=800 height=800> 
+  <img src="https://www.researchgate.net/profile/Khalil_Ibrahim9/publication/319404402/figure/fig1/AS:624721326526466@1525956579998/Flow-chart-of-A-star-algorithm.png" alt="a star flow diagram" width=800 height=800> 
+
 
 - A* Search Algorithm
 1.  Initialize the open list
@@ -287,7 +291,7 @@ At each iteration of its main loop, A* needs to determine which of its partial p
 - Bi-directional DJIKSTRA
  This is a somewhat more effective optimization and almost all route calculation algorithms in the industry use it but not primarily for the performance advantage it brings. It means that the route is computed both forward from the origin (with Dijkstra, A*, reach-based routing, highway hierarchies, contraction hierarchies, or other methods) and backward from the destination. Like A*, the technique reduces the area searched, but more importantly, some more important algorithms (ones using road hierarchies) require it to work. But bi-directional route computations bring their own complications – the algorithm must determine when the two searches have met at a point on an optimum or near optimum route and that’s more complex than it sounds. 
 
-<img src="b18074/comp.jpg" width=800 height=500> 
+<img src="https://slideplayer.com/slide/13603724/83/images/4/Dijkstra+vs+Bidirectional+Dijkstra.jpg" alt="comparison" width=800 height=500> 
 
 ## Without any heuristic I believe shortest distance problem is basically plain dijkstra algorithm and computation time would be O(V^2) 
  
@@ -297,7 +301,7 @@ At each iteration of its main loop, A* needs to determine which of its partial p
 With Heuristics Accuracy will increase as seen below and maybe time also decrease because now we can straight away cancel a route if it violates heuristic and we need not traverse on that route , just see Djikstra below how many points it is traversing for our model so I believe it is subjective and based on our model . 
 
  
- <img src="b18074/map.jpg" width=800 height=1100> 
+ <img src="https://i.stack.imgur.com/Bh5da.jpg" alt="shortest route" width=800 height=1100> 
   
 
 Yup we will be able  reroute instantly in realtime , cuz now the algorithm calculates shortest route considering our position as the starting point and destination as the ending point . 
